version/0.30/_sources/api/solver/_autosummary/settings/forces.rst.txt
:orphan:

.. _forces:

forces
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.forces
    :show-inheritance:

.. rubric:: Attributes

==============================================================   ===============================

Attribute                                                                                Summary

==============================================================   ===============================
:ref:`surface_tension <surface_tension>`                                        Group of phases.

:ref:`surface_tension_model <surface_tension_model>`                              Sfc modeling?.

:ref:`surface_tension_model_type <surface_tension_model_type>`       Surface Tension model type.

:ref:`wall_adhesion <wall_adhesion>`                                              Sfc modeling?.

==============================================================   ===============================

.. rubric:: Included in:

============================================   ======================

Parent                                                        Summary

============================================   ======================
:ref:`phase_interaction <phase_interaction>`       Phase interaction.

============================================   ======================

