version/0.40/_sources/api/solver/_autosummary/settings/forces.rst.txt
:orphan:

.. _forces:

forces
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.forces
    :show-inheritance:

.. rubric:: Attributes

==============================================================   ================================================

Attribute                                                                                                 Summary

==============================================================   ================================================
:ref:`surface_tension_model <surface_tension_model>`                                               Sfc modeling?.

:ref:`surface_tension_model_type <surface_tension_model_type>`                        Surface Tension model type.

:ref:`wall_adhesion <wall_adhesion>`                                                     Wall adhesion modeling?.

:ref:`jump_adhesion <jump_adhesion>`                                                     Jump adhesion modeling?.

:ref:`drag_mixture <drag_mixture>`                                                            Mixture model drag.

:ref:`drag_euler <drag_euler>`                                                                Mixture model drag.

:ref:`lift_euler <lift_euler>`                                                                My surf tens coeff.

:ref:`wall_lub_euler <wall_lub_euler>`                                                        My surf tens coeff.

:ref:`turb_disp_euler <turb_disp_euler>`                                                    Turbulent dispersion.

:ref:`slip_velocity <slip_velocity>`                                                          My surf tens coeff.

:ref:`surface_tension <surface_tension>`                                                      My surf tens coeff.

:ref:`rest_coeff <rest_coeff>`                                       Restitution-coefficient for granular phases.

==============================================================   ================================================

.. rubric:: Included in:

============================================   ======================

Parent                                                        Summary

============================================   ======================
:ref:`phase_interaction <phase_interaction>`       Phase interaction.

============================================   ======================

